--- a/photo_club/static/css/photo_club.css
+++ b/photo_club/static/css/photo_club.css
@@ -1,11 +1,49 @@
 body{
-    padding-left: 15px;
+    padding: 20px 20px 20px 40px;
     background-color: black;
 
 }
-h1{
-    color: royalblue
-}
+
 p {
     color: darkgray
+}
+.page-header {
+    background-color: #000000;
+    margin-top: 0;
+    text-align: center;
+    font-family: 'Lobster', cursive;
+}
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+    color: royalblue;
+    font-size: 36pt;
+    text-decoration: none;
+}
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: 'Lobster', cursive;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: steelblue;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: dodgerblue;
+  color: white;
+    
 }
