--- a/photo_club/templates/photo_club/base.html
+++ b/photo_club/templates/photo_club/base.html
@@ -10,8 +10,22 @@
         <link rel="stylesheet" href="{% static 'css/photo_club.css' %}">
     </head>
 <body>
-    <h1>hello to my photo_club</h1>
+    <div class="page-header">
+        
+        <h1><a href="/home/blog">Photo Club</a></h1>
+            
+        <div class="topnav">
+            <a class="active" href="/home">Home</a>
+            <a href="#newst">Newst</a>
+            <a href="#news">popular</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+
+    </div>
+    <div>
      {% block content %}
      {% endblock %}
+    </div>
 </body>
 </html>
