--- a/photo_club/templates/photo_club/photo_list.html
+++ b/photo_club/templates/photo_club/photo_list.html
@@ -1,14 +1,13 @@
 {% extends 'photo_club/base.html' %}
+{% load staticfiles %}
 
 
 {% block content %} 
     {% for post in posts %}
         <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
             <h2><a href="{% url 'photo_list' %}">{{ post.title }}</a></h2>
-            <p>{{ post.image|linebreaksbr }}</p>
-        </div>
+            {{ post.published_date }}
+            <br><img src="{{post.image.url}}" height="100px" width="100px">
+            <p>{{linebreaksbr }}</p>
     {% endfor %}
 {% endblock %}
