edit photo_list.css & settings

--- a/photo_club/static/css/photo_club.css
+++ b/photo_club/static/css/photo_club.css
@@ -47,3 +47,12 @@ p {
   color: white;
     
 }
+#post {
+    float:left;
+    padding: 10px 10px;
+}
+.title {
+      text-align: center;
+      font-family: 'Lobster', cursive;
+
+}
