--- a/photo_club/templates/photo_club/base.html
+++ b/photo_club/templates/photo_club/base.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page-header">
         
-        <h1><a href="/home/blog">Photo Club</a></h1>
+        <h1><a href="/home">Photo Club</a></h1>
             
         <div class="topnav">
             <a class="active" href="/home">Home</a>
@@ -23,6 +23,7 @@
         </div>
 
     </div>
+    <h3>THE ALBUMS</h3>
      {% block content %}
      {% endblock %}
 </body>
