--- a/photo_club/templates/photo_club/base.html
+++ b/photo_club/templates/photo_club/base.html
@@ -13,7 +13,8 @@
     <div class="page-header">
         
         <h1><a href="/home">Photo Club</a></h1>
-            
+        <a class="btn btn-default" href="{% url 'photo_new' %}" class="top-menu"><span class="glyphicon glyphicon-cloud-upload"></span></a>
+        
         <div class="topnav">
             <a class="active" href="/home">Home</a>
             <a href="#newst">Newst</a>
@@ -21,9 +22,10 @@
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div>
-
+         
     </div>
     <h3>THE ALBUMS</h3>
+    
      {% block content %}
      {% endblock %}
 </body>
